Bug fix with webserver

--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@ h2 {
 
 <h2>Matthew Newman's Showcase Project</h2>
 {% load static %}
-<p><img src="{% static 'images/chop.png' %}" alt="My image" width="1500" height="750"></p>
+<p><img src="https://s3.amazonaws.com/mattynewms.com/Chop.jpg" alt="My image" width="1500" height="750"></p>
 
 <button class = button onclick = "location.href='dashboard'">Dashboard</button>
 <button class = button onclick = "location.href='use_a_sample'">Use a Sample</button>
